			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.03b: *********************************

IMP: (08/08/05, RK) NCC: Add size disambiguation for Resistors (Bug# 449)

BUG: (08/08/05, RK) NCC: Fix Heater regression non-determinism (Bug# 415)

BUG: (08/06/05, GVG) Edit->Change loses polygon shape (reported by JonL)
FIX: PossibleVariables.validKey doesn't consider TRACE so it will skip checking in replaceNodeInst

BUG: (08/06/05, GVG) Infinite loop while doing cross-libraries with delete and subcells options (Bug #445)
FIX: Just patch to avoid the infinite loop

IMP/MAN (08/05/05, JKG) Made Cell name length in output GDS files a preference instead
    of hard coded to 32 (a limit not enforced by most tools nowadays)

IMP/MAN (08/05/05, JKG) Tool -> DRC -> Read Calibre DRC Errors reads in calibre drc results

IMP: (08/05/05, RK) NCC: When "Halt on first mismatched Cell" is enabled, don't stop for size mismatches (Bug# 446)

BUG: (08/05/05, RK) Warning: "Improvement" below disables NCC GUI until GUI is changed to accomodate new data structures.

IMP: (08/05/05, RK) Improvement to Local Partitioning algorithm. (Bug #447)

IMP: (08/05/05, DN) Yet another Spice format: Epic simulation output (for nanosim).
    Format choice list in SpiceTab dialog has one more item - "Epic". 

BUG: (08/05/05, DN) Problem with arc and tail extensions deleting a jog from arc.
FIX: In CircuitChanges.reconnectArcs fill "ra.extendHead/Tail" from proper arc end only.

BUG: (08/05/05, DN) Duplicating export causes exception (Bug #443).
FIX: ElectricObject.uniqueObjectName retries until it obtains Cell.isUniqueName or fail in 100 iterations.
     In Export.newInstance check if uniqueObjectName returns null.

BUG: (08/04/05, DN) Problems with arc head and tail extensions (by Frankie Liu).
FIX: In EditMenu.InsertJogPoint set head and tail extensions.
